Fix commands application